<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Поле для ввода логина -->
    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:inputType="textEmailAddress"
        android:autofillHints="username"
        android:importantForAutofill="yes" />

    <!-- Поле для ввода пароля -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:importantForAutofill="yes" />

    <!-- Кнопка входа -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_login"
        android:minHeight="48dp"/>

    <!-- Ссылка на регистрацию -->
    <TextView
        android:id="@+id/tvToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/link_register"
        android:textColor="@color/purple_500"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>